# ptracer

./: CMakeLists.txt  README.md  run_format.sh
benchmarks/: BenchmarkBase.h  CMakeLists.txt  SimpleSceneBenchmark.cpp  SimpleSceneBenchmark.txt
include/: Camera.h  Color.h  Config.h  GeoVec.h  Matrix.h  Objects.h  Pixel.h  PngWriter.h  Ray.h  Reflector.h  Renderer.h  Scene.h
scenes/: simple_scene.json
scenes/triangle_simple_scenes/: bounding_box.json  box_lamp.json  cone.json  cyllinder.json  scene_with_lamp.json  sphere.json
src/: CMakeLists.txt  PngWriter.cpp  color.cpp  config.cpp  main.cpp  matrix.cpp  objects.cpp  pixel.cpp  reflector.cpp  renderer.cpp
tests/: CMakeLists.txt  CameraTests.cpp  ColorTests.cpp  ConfigTests.cpp  GeoVecTests.cpp  MatrixTests.cpp  ObjTests.cpp  PixelTests.cpp  RayTests.cpp  main.cpp
